deploy/k8s/local/notifications/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
spec:
  selector:
      matchLabels:
        app: notifications
  replicas: 1
  template:
      metadata:
        labels:
            app: notifications
      spec:
        containers:
        - name: notifications
          image: vany0114/duber.trip.notifications
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "600m"
          ports:
          - containerPort: 80
